@@ -107,3 +107,5 @@ v0.9.1 (WIP):
     BUGFIX: Editor: Clamp over-the-edge drag distance to prevent scrolling to infinity on focus lost
 
     BUGFIX: Editor: Consume scroll event (#73) (require ImGui 17909 or later)
+
+    BUGFIX: Editor: Respect window focus while handling actions (#99)
